# llvm-project

clang/cmake/modules/: AddClang.cmake
clang/include/clang/Basic/: Builtins.h
clang/include/clang/CodeGen/: CodeGenPluginEntryPoint.h
clang/lib/AST/: ExprConstant.cpp
clang/lib/Basic/: Builtins.cpp
clang/lib/CodeGen/: CGBuiltin.cpp  CMakeLists.txt  CodeGenFunction.h  CodeGenPluginEntryPoint.cpp
clang/lib/Sema/: SemaChecking.cpp
clang/test/: lit.cfg  lit.site.cfg.in
lld/COFF/: DriverUtils.cpp
lld/tools/lld/: CMakeLists.txt
llvm/: CMakeLists.txt
llvm/cmake/modules/: AddLLVM.cmake  HandleLLVMOptions.cmake
llvm/tools/msbuild/: CMakeLists.txt  Microsoft.Cpp.Win32.llvm.props.in  install.bat.in  uninstall.bat.in
